# rust-htmx-template

./: Cargo.toml
src/: fragment.rs  main.rs  opts.rs  page.rs  routes.rs
static/: style.css
