[package]
name = "htmx-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
debug = "line-tables-only"

[profile.release]
debug = "line-tables-only"
lto = "fat"
codegen-units = 1

[dependencies]
anyhow = "1.0.75"
astra = { git = "https://github.com/dpc/astra", rev = "5b0790fa86cd05ea85e729c3b17fe5c7f7aac143" }
hyper = "0.14.27"
matchit = "0.7.2"
maud = "0.25.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
redb = "1.1.0"
dotenv = "0.15.0"
clap = { version = "4.4.0", features = ["derive"] }
lettre = { version = "0.10.4", default-features = false, features = ["rustls-tls", "smtp-transport", "hostname", "builder"]}
tap = "1.0.1"
